@@ -812,3 +812,5 @@
 2015-11-02 Fred Gleason <fredg@paravelsystems.com>
 	* Cleaned up warnings in 'configure.ac' and 'Makefile.am'.
 	* Added a 'qt3-MySQL' dependency in 'davit.spec.in'.
+2016-07-28 Fred Gleason <fredg@paravelsystems.com>
+	* Updated 'acinclude.m4'.
